se agregaron las seed de productos, clientes y pedidos y se modificaron archivos para su uso en atlas

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/tienda_virtual2
-PORT=5000
+MONGO_URI=mongodb+srv://dardognz:9zT6XKb3TlKxCxYt@tienda-virtual2.vof2ree.mongodb.net/
+
