--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "tienda-virtual2",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.8.0",
     "body-parser": "^2.2.0",
@@ -7,5 +18,6 @@
     "express": "^5.1.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.1"
-  }
+  },
+  "devDependencies": {}
 }
