--- a/package.json
+++ b/package.json
@@ -19,5 +19,7 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/node": "^24.0.10"
+  }
 }
